Fix bug on safari where border radius is nod displayed correctly on about section headert

--- a/src/components/content/about/Waves.module.css
+++ b/src/components/content/about/Waves.module.css
@@ -1,6 +1,7 @@
 .waves {
 	position: relative;
 	overflow: hidden;
+	z-index: 1;
 }
 
 .waves::before,
